# can_fd

./: .gitignore
core0/: CMakeLists.txt
core0/hpm6750evkmini_flash_sdram_xip_debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
core0/hpm6750evkmini_flash_sdram_xip_debug/build_tmp/: cmake_install.cmake
core0/hpm6750evkmini_flash_sdram_xip_debug/build_tmp/arch/: cmake_install.cmake
core0/hpm6750evkmini_flash_sdram_xip_debug/build_tmp/boards/: cmake_install.cmake
core0/hpm6750evkmini_flash_sdram_xip_debug/build_tmp/components/: cmake_install.cmake
core0/hpm6750evkmini_flash_sdram_xip_debug/iar_embedded_workbench/: tran_receTest_core0.ewd  tran_receTest_core0.ewp  tran_receTest_core0.eww  tran_receTest_core0.json
core0/hpm6750evkmini_flash_sdram_xip_debug/segger_embedded_studio/: tran_receTest_core0.emProject  tran_receTest_core0.emSession  tran_receTest_core0.json
core1/: CMakeLists.txt
core1/hpm6750evk2_flash_sdram_xip_debug/: .ninja_deps  .ninja_log
core1/hpm6750evkmini_flash_sdram_xip_debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
core1/hpm6750evkmini_flash_sdram_xip_debug/build_tmp/: cmake_install.cmake
core1/hpm6750evkmini_flash_sdram_xip_debug/iar_embedded_workbench/: tran_receTest_core1.custom_argvars  tran_receTest_core1.ewd  tran_receTest_core1.ewp  tran_receTest_core1.eww  tran_receTest_core1.json
core1/hpm6750evkmini_flash_sdram_xip_debug/segger_embedded_studio/: tran_receTest_core1.emProject  tran_receTest_core1.emSession  tran_receTest_core1.json
inc/: app_mbx.h  can_test.h  (+5 more)
(+32 files in other folders)
